projects/code-processing/src/lib/generated/ArisParser.ts
// Generated from antlr4/Aris.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ArisListener } from "./ArisListener";
import { ArisVisitor } from "./ArisVisitor";


export class ArisParser extends Parser {
	public static readonly ADD = 1;
	public static readonly SUB = 2;
	public static readonly COPY = 3;
	public static readonly MOVE = 4;
	public static readonly TO = 5;
	public static readonly FROM = 6;
	public static readonly INPUT = 7;
	public static readonly OUTPUT = 8;
	public static readonly LOOP = 9;
	public static readonly BREAK = 10;
	public static readonly CONTINUE = 11;
	public static readonly IFZERO = 12;
	public static readonly IFNOTZERO = 13;
	public static readonly IFPOS = 14;
	public static readonly IFNEG = 15;
	public static readonly INCR = 16;
	public static readonly DECR = 17;
	public static readonly CURLY_OPEN = 18;
	public static readonly CURLY_CLOSED = 19;
	public static readonly MEMORY_SLOT = 20;
	public static readonly MEMORY_SLOT_NUMBER = 21;
	public static readonly MEMORY_SLOT_NAME = 22;
	public static readonly NEWLINE = 23;
	public static readonly LINE_COMMENT = 24;
	public static readonly UNIDENTIFIED = 25;
	public static readonly WHITESPACE = 26;
	public static readonly ERROR_CHARACTER = 27;
	public static readonly RULE_program = 0;
	public static readonly RULE_lines = 1;
	public static readonly RULE_line = 2;
	public static readonly RULE_expression = 3;
	public static readonly RULE_action = 4;
	public static readonly RULE_move = 5;
	public static readonly RULE_copy = 6;
	public static readonly RULE_add = 7;
	public static readonly RULE_subtract = 8;
	public static readonly RULE_increment = 9;
	public static readonly RULE_decrement = 10;
	public static readonly RULE_loop = 11;
	public static readonly RULE_break = 12;
	public static readonly RULE_continue = 13;
	public static readonly RULE_ifZero = 14;
	public static readonly RULE_ifNotZero = 15;
	public static readonly RULE_ifPos = 16;
	public static readonly RULE_ifNeg = 17;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "lines", "line", "expression", "action", "move", "copy", "add", 
		"subtract", "increment", "decrement", "loop", "break", "continue", "ifZero", 
		"ifNotZero", "ifPos", "ifNeg",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'add'", "'sub'", "'copy'", "'move'", "'to'", "'from'", "'input'", 
		"'output'", "'loop'", "'break'", "'continue'", "'ifzero'", "'ifnotzero'", 
		"'ifpos'", "'ifneg'", "'incr'", "'decr'", "'{'", "'}'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "ADD", "SUB", "COPY", "MOVE", "TO", "FROM", "INPUT", "OUTPUT", 
		"LOOP", "BREAK", "CONTINUE", "IFZERO", "IFNOTZERO", "IFPOS", "IFNEG", 
		"INCR", "DECR", "CURLY_OPEN", "CURLY_CLOSED", "MEMORY_SLOT", "MEMORY_SLOT_NUMBER", 
		"MEMORY_SLOT_NAME", "NEWLINE", "LINE_COMMENT", "UNIDENTIFIED", "WHITESPACE", 
		"ERROR_CHARACTER",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ArisParser._LITERAL_NAMES, ArisParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return ArisParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Aris.g4"; }

	// @Override
	public get ruleNames(): string[] { return ArisParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return ArisParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ArisParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ArisParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 37;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 36;
				this.line();
				}
				}
				this.state = 39;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ArisParser.ADD) | (1 << ArisParser.SUB) | (1 << ArisParser.COPY) | (1 << ArisParser.MOVE) | (1 << ArisParser.LOOP) | (1 << ArisParser.BREAK) | (1 << ArisParser.CONTINUE) | (1 << ArisParser.IFZERO) | (1 << ArisParser.IFNOTZERO) | (1 << ArisParser.IFPOS) | (1 << ArisParser.IFNEG) | (1 << ArisParser.INCR) | (1 << ArisParser.DECR))) !== 0));
			this.state = 41;
			this.match(ArisParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public lines(): LinesContext {
		let _localctx: LinesContext = new LinesContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ArisParser.RULE_lines);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 46;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ArisParser.ADD) | (1 << ArisParser.SUB) | (1 << ArisParser.COPY) | (1 << ArisParser.MOVE) | (1 << ArisParser.LOOP) | (1 << ArisParser.BREAK) | (1 << ArisParser.CONTINUE) | (1 << ArisParser.IFZERO) | (1 << ArisParser.IFNOTZERO) | (1 << ArisParser.IFPOS) | (1 << ArisParser.IFNEG) | (1 << ArisParser.INCR) | (1 << ArisParser.DECR))) !== 0)) {
				{
				{
				this.state = 43;
				this.line();
				}
				}
				this.state = 48;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public line(): LineContext {
		let _localctx: LineContext = new LineContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ArisParser.RULE_line);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 49;
			this.expression();
			this.state = 53;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ArisParser.NEWLINE) {
				{
				{
				this.state = 50;
				this.match(ArisParser.NEWLINE);
				}
				}
				this.state = 55;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ArisParser.RULE_expression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 56;
			this.action();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public action(): ActionContext {
		let _localctx: ActionContext = new ActionContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, ArisParser.RULE_action);
		try {
			this.state = 71;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ArisParser.COPY:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 58;
				this.copy();
				}
				break;
			case ArisParser.MOVE:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 59;
				this.move();
				}
				break;
			case ArisParser.ADD:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 60;
				this.add();
				}
				break;
			case ArisParser.SUB:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 61;
				this.subtract();
				}
				break;
			case ArisParser.INCR:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 62;
				this.increment();
				}
				break;
			case ArisParser.DECR:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 63;
				this.decrement();
				}
				break;
			case ArisParser.LOOP:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 64;
				this.loop();
				}
				break;
			case ArisParser.BREAK:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 65;
				this.break();
				}
				break;
			case ArisParser.CONTINUE:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 66;
				this.continue();
				}
				break;
			case ArisParser.IFZERO:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 67;
				this.ifZero();
				}
				break;
			case ArisParser.IFNOTZERO:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 68;
				this.ifNotZero();
				}
				break;
			case ArisParser.IFPOS:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 69;
				this.ifPos();
				}
				break;
			case ArisParser.IFNEG:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 70;
				this.ifNeg();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public move(): MoveContext {
		let _localctx: MoveContext = new MoveContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, ArisParser.RULE_move);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 73;
			this.match(ArisParser.MOVE);
			this.state = 74;
			_la = this._input.LA(1);
			if (!(_la === ArisParser.INPUT || _la === ArisParser.MEMORY_SLOT)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 75;
			this.match(ArisParser.TO);
			this.state = 76;
			_la = this._input.LA(1);
			if (!(_la === ArisParser.OUTPUT || _la === ArisParser.MEMORY_SLOT)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public copy(): CopyContext {
		let _localctx: CopyContext = new CopyContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, ArisParser.RULE_copy);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 78;
			this.match(ArisParser.COPY);
			this.state = 79;
			this.match(ArisParser.MEMORY_SLOT);
			this.state = 80;
			this.match(ArisParser.TO);
			this.state = 81;
			_la = this._input.LA(1);
			if (!(_la === ArisParser.OUTPUT || _la === ArisParser.MEMORY_SLOT)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public add(): AddContext {
		let _localctx: AddContext = new AddContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, ArisParser.RULE_add);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 83;
			this.match(ArisParser.ADD);
			this.state = 84;
			this.match(ArisParser.MEMORY_SLOT);
			this.state = 85;
			this.match(ArisParser.TO);
			this.state = 86;
			this.match(ArisParser.MEMORY_SLOT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public subtract(): SubtractContext {
		let _localctx: SubtractContext = new SubtractContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, ArisParser.RULE_subtract);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 88;
			this.match(ArisParser.SUB);
			this.state = 89;
			this.match(ArisParser.MEMORY_SLOT);
			this.state = 90;
			this.match(ArisParser.FROM);
			this.state = 91;
			this.match(ArisParser.MEMORY_SLOT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public increment(): IncrementContext {
		let _localctx: IncrementContext = new IncrementContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, ArisParser.RULE_increment);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 93;
			this.match(ArisParser.INCR);
			this.state = 94;
			this.match(ArisParser.MEMORY_SLOT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public decrement(): DecrementContext {
		let _localctx: DecrementContext = new DecrementContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, ArisParser.RULE_decrement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 96;
			this.match(ArisParser.DECR);
			this.state = 97;
			this.match(ArisParser.MEMORY_SLOT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public loop(): LoopContext {
		let _localctx: LoopContext = new LoopContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, ArisParser.RULE_loop);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 99;
			this.match(ArisParser.LOOP);
			this.state = 100;
			this.match(ArisParser.CURLY_OPEN);
			this.state = 101;
			this.match(ArisParser.NEWLINE);
			this.state = 102;
			this.lines();
			this.state = 103;
			this.match(ArisParser.CURLY_CLOSED);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public break(): BreakContext {
		let _localctx: BreakContext = new BreakContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, ArisParser.RULE_break);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 105;
			this.match(ArisParser.BREAK);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public continue(): ContinueContext {
		let _localctx: ContinueContext = new ContinueContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, ArisParser.RULE_continue);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 107;
			this.match(ArisParser.CONTINUE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifZero(): IfZeroContext {
		let _localctx: IfZeroContext = new IfZeroContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, ArisParser.RULE_ifZero);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this.match(ArisParser.IFZERO);
			this.state = 110;
			_la = this._input.LA(1);
			if (!(_la === ArisParser.INPUT || _la === ArisParser.MEMORY_SLOT)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 111;
			this.match(ArisParser.CURLY_OPEN);
			this.state = 112;
			this.match(ArisParser.NEWLINE);
			this.state = 113;
			this.lines();
			this.state = 114;
			this.match(ArisParser.CURLY_CLOSED);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifNotZero(): IfNotZeroContext {
		let _localctx: IfNotZeroContext = new IfNotZeroContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, ArisParser.RULE_ifNotZero);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 116;
			this.match(ArisParser.IFNOTZERO);
			this.state = 117;
			_la = this._input.LA(1);
			if (!(_la === ArisParser.INPUT || _la === ArisParser.MEMORY_SLOT)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 118;
			this.match(ArisParser.CURLY_OPEN);
			this.state = 119;
			this.match(ArisParser.NEWLINE);
			this.state = 120;
			this.lines();
			this.state = 121;
			this.match(ArisParser.CURLY_CLOSED);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifPos(): IfPosContext {
		let _localctx: IfPosContext = new IfPosContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, ArisParser.RULE_ifPos);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			this.match(ArisParser.IFPOS);
			this.state = 124;
			_la = this._input.LA(1);
			if (!(_la === ArisParser.INPUT || _la === ArisParser.MEMORY_SLOT)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 125;
			this.match(ArisParser.CURLY_OPEN);
			this.state = 126;
			this.match(ArisParser.NEWLINE);
			this.state = 127;
			this.lines();
			this.state = 128;
			this.match(ArisParser.CURLY_CLOSED);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifNeg(): IfNegContext {
		let _localctx: IfNegContext = new IfNegContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, ArisParser.RULE_ifNeg);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 130;
			this.match(ArisParser.IFNEG);
			this.state = 131;
			_la = this._input.LA(1);
			if (!(_la === ArisParser.INPUT || _la === ArisParser.MEMORY_SLOT)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 132;
			this.match(ArisParser.CURLY_OPEN);
			this.state = 133;
			this.match(ArisParser.NEWLINE);
			this.state = 134;
			this.lines();
			this.state = 135;
			this.match(ArisParser.CURLY_CLOSED);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!ArisParser.__ATN) {
			ArisParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(ArisParser._serializedATN));
		}

		return ArisParser.__ATN;
	}

}

export class ProgramContext extends ParserRuleContext {
	public EOF(): TerminalNode { return this.getToken(ArisParser.EOF, 0); }
	public line(): LineContext[];
	public line(i: number): LineContext;
	public line(i?: number): LineContext | LineContext[] {
		if (i === undefined) {
			return this.getRuleContexts(LineContext);
		} else {
			return this.getRuleContext(i, LineContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ArisParser.RULE_program; }
	// @Override
	public enterRule(listener: ArisListener): void {
		if (listener.enterProgram) {
			listener.enterProgram(this);
		}
	}
	// @Override
	public exitRule(listener: ArisListener): void {
		if (listener.exitProgram) {
			listener.exitProgram(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ArisVisitor<Result>): Result {
		if (visitor.visitProgram) {
			return visitor.visitProgram(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class LinesContext extends ParserRuleContext {
	public line(): LineContext[];
	public line(i: number): LineContext;
	public line(i?: number): LineContext | LineContext[] {
		if (i === undefined) {
			return this.getRuleContexts(LineContext);
		} else {
			return this.getRuleContext(i, LineContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ArisParser.RULE_lines; }
	// @Override
	public enterRule(listener: ArisListener): void {
		if (listener.enterLines) {
			listener.enterLines(this);
		}
	}
	// @Override
	public exitRule(listener: ArisListener): void {
		if (listener.exitLines) {
			listener.exitLines(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ArisVisitor<Result>): Result {
		if (visitor.visitLines) {
			return visitor.visitLines(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class LineContext extends ParserRuleContext {
	public expression(): ExpressionContext {
		return this.getRuleContext(0, ExpressionContext);
	}
	public NEWLINE(): TerminalNode[];
	public NEWLINE(i: number): TerminalNode;
	public NEWLINE(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(ArisParser.NEWLINE);
		} else {
			return this.getToken(ArisParser.NEWLINE, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ArisParser.RULE_line; }
	// @Override
	public enterRule(listener: ArisListener): void {
		if (listener.enterLine) {
			listener.enterLine(this);
		}
	}
	// @Override
	public exitRule(listener: ArisListener): void {
		if (listener.exitLine) {
			listener.exitLine(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ArisVisitor<Result>): Result {
		if (visitor.visitLine) {
			return visitor.visitLine(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ExpressionContext extends ParserRuleContext {
	public action(): ActionContext {
		return this.getRuleContext(0, ActionContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ArisParser.RULE_expression; }
	// @Override
	public enterRule(listener: ArisListener): void {
		if (listener.enterExpression) {
			listener.enterExpression(this);
		}
	}
	// @Override
	public exitRule(listener: ArisListener): void {
		if (listener.exitExpression) {
			listener.exitExpression(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ArisVisitor<Result>): Result {
		if (visitor.visitExpression) {
			return visitor.visitExpression(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ActionContext extends ParserRuleContext {
	public copy(): CopyContext | undefined {
		return this.tryGetRuleContext(0, CopyContext);
	}
	public move(): MoveContext | undefined {
		return this.tryGetRuleContext(0, MoveContext);
	}
	public add(): AddContext | undefined {
		return this.tryGetRuleContext(0, AddContext);
	}
	public subtract(): SubtractContext | undefined {
		return this.tryGetRuleContext(0, SubtractContext);
	}
	public increment(): IncrementContext | undefined {
		return this.tryGetRuleContext(0, IncrementContext);
	}
	public decrement(): DecrementContext | undefined {
		return this.tryGetRuleContext(0, DecrementContext);
	}
	public loop(): LoopContext | undefined {
		return this.tryGetRuleContext(0, LoopContext);
	}
	public break(): BreakContext | undefined {
		return this.tryGetRuleContext(0, BreakContext);
	}
	public continue(): ContinueContext | undefined {
		return this.tryGetRuleContext(0, ContinueContext);
	}
	public ifZero(): IfZeroContext | undefined {
		return this.tryGetRuleContext(0, IfZeroContext);
	}
	public ifNotZero(): IfNotZeroContext | undefined {
		return this.tryGetRuleContext(0, IfNotZeroContext);
	}
	public ifPos(): IfPosContext | undefined {
		return this.tryGetRuleContext(0, IfPosContext);
	}
	public ifNeg(): IfNegContext | undefined {
		return this.tryGetRuleContext(0, IfNegContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return ArisParser.RULE_action; }
	// @Override
	public enterRule(listener: ArisListener): void {
		if (listener.enterAction) {
			listener.enterAction(this);
		}
	}
	// @Override
	public exitRule(listener: ArisListener): void {
		if (listener.exitAction) {
			listener.exitAction(this);
		}
	}
	// @Override
	public accept<Result>(visitor: ArisVisitor<Result>): Result {
		if (visitor.visitAction) {
			return visitor.visitAction(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

